Fix overflow

--- a/src/scss/main.scss
+++ b/src/scss/main.scss
@@ -364,6 +364,7 @@ $bfs-font-stack: Montserrat, sans-serif;
 #sponsors {
   background-color: white;
   padding-top: 1em;
+  overflow: hidden;
 
   h3 {
     font-size: 3.2rem;   //~51px;
